Resolves: tdf#95748 no group interpreter when calculations are running

Change-Id: I17283fc5e39da2d7222c302dd63522df69d0ad96
(cherry picked from commit d46203b55d92185ab2c1d3ac79761100d26aaee3)